--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-heroku==0.3.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.1.0
 djlint==1.0.0
+gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.11.3
 pathspec==0.9.0
